Fixed dependency tracking. Added spacing tweaks.

--- a/base/less/style.less
+++ b/base/less/style.less
@@ -3,8 +3,7 @@
 
 @import "bootstrap/bootstrap.less";
 
-@gridColumnWidth: 40px;
-@gridGutterWidth: 15px;
+#grid > .core(45px, 15px);
 
 body {
   padding-top: 60px;
@@ -15,19 +14,20 @@ body {
 
 @media (min-width: 1200px) {
 
-  #grid > .core(60px, 20px);
+  #grid > .core(45px, 15px);
 
   // Input grid
-  #grid > .input(60px, 20px);
+  #grid > .input(45px, 15px);
 
 }
 
 @gridColumnWidthLarge: 60px;
 @gridGutterWidthLarge: 20px;
+html {overflow-y:scroll;}
 body {
   font-family: "Trykker", "Times New Roman";
   font-weight: 400;
-  font-size: 15px;
+  font-size: 14px;
 }
 
 h1, h2, h3, h4, h5, h6, .navbar {
@@ -35,7 +35,23 @@ h1, h2, h3, h4, h5, h6, .navbar {
   font-weight: 700;
 }
 
-p {
-  text-align: justify;
-}
+.main-content {
+  p, li {
+    line-height: 22px;
+    margin-top: 15px;
+    }
+  }
 
+
+figure {
+  display: inline-block;
+  img {
+    border-top: 1px dotted #333;
+    padding: 5px;
+    }
+  figcaption {
+    text-align: center;
+    border-bottom: 1px dotted #333;
+    padding: 8px;
+    }
+}
